
    *******************************************************
    Warnings, errors, malfunctions, code patches, suggestions
    Support Forum: http://forum.darkbot.org
    *******************************************************


Darkbot 7f3: Dec 5, 2004
	- Fixed a warning that came up in permbans.c about mixing 
	  types when compiling on OS X.  I changed %d on line 198 
	  to %ud.

	- configure now checks for clock_t.

 	- configure now automatically checks for snprintf, and 
	  uses a replacement if it's not found.

	- docs/INSTALL.txt is now INSTALL in the toplevel dir.
	  Another thing for automake to stop complaining about.

	- The original configure script is now located in the
	  scripts directory, and is called "Setup". 

	- docs/contributors.txt is now called AUTHORS in the
	  top level of the distribution.  Another thing automake
	  complains about.  I also worked on the appearance of 
	  this file, hopefully it looks a little better now.

	- README.txt in the toplevel is now called "README". 
	  Automake complains about this file also, if it's not
	  found.

	- This file is now called ChangeLog, and has been moved
	  to the toplevel distribution dir.  The reason for this 
	  is that automake complains, if it can't find this file.

	- configure now checks for the presence of windows.h, 
	  and defines WIN32, if it's found.  This removes the
	  need to do "make win".  Until I add the noconsole 
	  option again, you can run darkbot with no console by
	  doing "./darkbot &" in your cygwin shell.

	- The configure.ac file is not yet complete, and most
	  of the definitions listed in config.h are not completely
	  implemented into the code yet.  If you have problems, 
	  please let me know, and these files will become completely
	  implemented as demand is met.

	- Included premade Makefiles and configure script.

	- Added "make convertdb", which will compile the database
	  conversion utility, which encrypts the passwords in your
	  userlist.db file.
